// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CDropdown customize 1`] = `
<div>
  <li
    class="nav-item dropdown dropstart bazinga"
  >
    Test
  </li>
</div>
`;

exports[`CDropdown example 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      aria-expanded="false"
      class="btn dropdown-toggle"
      tabindex="0"
      type="button"
    >
      Test
    </button>
    <ul
      class="dropdown-menu"
      role="menu"
    >
      <li>
        <h6
          class="dropdown-header"
        >
          A
        </h6>
      </li>
      <li>
        <a
          class="dropdown-item"
        >
          B
        </a>
      </li>
      <li>
        <span
          class="dropdown-item-text"
        >
          C
        </span>
      </li>
      <li>
        <hr
          class="dropdown-divider"
        />
      </li>
      <li>
        <a
          class="dropdown-item"
        >
          D
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`loads and displays CDropdown component 1`] = `
<div>
  <div
    class="dropdown"
  >
    Test
  </div>
</div>
`;
